--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,51 @@
 sonar.projectKey=nest-spire-rest
+
+# Nome do projeto exibido no SonarQube
+sonar.projectName=nest-spire-rest
+
+# Versão do projeto
+sonar.projectVersion=0.0.1
+
+# Diretório raiz do código-fonte
+sonar.sources=src
+
+# Exclusões de arquivos ou diretórios (opcional)
+# sonar.exclusions=**/node_modules/**,**/dist/**,**/out/**
+
+# Configuração da linguagem
+sonar.language=ts
+
+# Caminho relativo para o arquivo de configuração do tslint
+sonar.tslint.configPath=tslint.json
+
+# Caminho relativo para o arquivo de configuração do tsconfig
+sonar.tsconfig.path=tsconfig.json
+
+# Configuração para cobertura de testes (opcional)
+# sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
+# Caminho relativo para os relatórios de testes
+sonar.tests=src/__tests__
+
+# Caminho relativo para os relatórios de cobertura de testes (opcional)
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# URL do servidor do SonarQube
+sonar.host.url=http://localhost:9000
+
+# Token de acesso ao projeto no SonarQube (opcional, se configurado)
+# sonar.login=seu-token-de-acesso
+
+# Diretório para os arquivos temporários do SonarQube
+sonar.working.directory=.scannerwork
+
+# Configuração da base de dados do SonarQube (opcional)
+# sonar.jdbc.url=jdbc:postgresql://localhost/sonar
+# sonar.jdbc.username=seu-usuario
+# sonar.jdbc.password=seu-senha
+
+# Configuração de exclusões para análise de duplicação (opcional)
+# sonar.cpd.exclusions=**/node_modules/**,**/dist/**,**/out/**
+
+# Configuração de exclusões de duplicações para TypeScript (opcional)
+# sonar.typescript.tslint.reportPaths=reports/tslint-report.json
