refactor: update sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,7 +25,7 @@ sonar.tsconfig.path=tsconfig.json
 # sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # Caminho relativo para os relatórios de testes
-sonar.tests=src/__tests__
+sonar.tests=test
 
 # Caminho relativo para os relatórios de cobertura de testes (opcional)
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
