refactor: update sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,42 +1,21 @@
 sonar.projectKey=nest-spire-rest
-
-# Nome do projeto exibido no SonarQube
+sonar.login=sqp_8ed725d76d72d6004ff703721c143a3ac4a2d58a
 sonar.projectName=nest-spire-rest
-
-# Versão do projeto
 sonar.projectVersion=0.0.1
-
-# Diretório raiz do código-fonte
-sonar.sources=src
-
-# Exclusões de arquivos ou diretórios (opcional)
-# sonar.exclusions=**/node_modules/**,**/dist/**,**/out/**
-
-# Configuração da linguagem
+sonar.sources=.
 sonar.language=ts
 
-# Caminho relativo para o arquivo de configuração do tslint
 sonar.tslint.configPath=tslint.json
 
-# Caminho relativo para o arquivo de configuração do tsconfig
 sonar.tsconfig.path=tsconfig.json
 
-# Configuração para cobertura de testes (opcional)
-# sonar.typescript.lcov.reportPaths=coverage/lcov.info
-
-# Caminho relativo para os relatórios de testes
 sonar.tests=test
 
-# Caminho relativo para os relatórios de cobertura de testes (opcional)
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-# URL do servidor do SonarQube
 sonar.host.url=http://localhost:9000
 
-# Token de acesso ao projeto no SonarQube (opcional, se configurado)
-# sonar.login=seu-token-de-acesso
 
-# Diretório para os arquivos temporários do SonarQube
 sonar.working.directory=.scannerwork
 
 # Configuração da base de dados do SonarQube (opcional)
