--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.tslint.configPath=tslint.json
 
 sonar.tsconfig.path=tsconfig.json
 
-sonar.tests=test
+sonar.tests=test,src/**/*.spec.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
