chore: update sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,8 +23,5 @@ sonar.working.directory=.scannerwork
 # sonar.jdbc.username=seu-usuario
 # sonar.jdbc.password=seu-senha
 
-# Configuração de exclusões para análise de duplicação (opcional)
-# sonar.cpd.exclusions=**/node_modules/**,**/dist/**,**/out/**
+sonar.cpd.exclusions=**/node_modules/**,**/dist/**,**/out/**
 
-# Configuração de exclusões de duplicações para TypeScript (opcional)
-# sonar.typescript.tslint.reportPaths=reports/tslint-report.json
