--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,27 +1,17 @@
 sonar.projectKey=nest-spire-rest
-sonar.login=sqp_8ed725d76d72d6004ff703721c143a3ac4a2d58a
 sonar.projectName=nest-spire-rest
 sonar.projectVersion=0.0.1
-sonar.sources=.
+
+# Linguagem do projeto
+sonar.sources=src
 sonar.language=ts
 
-sonar.tslint.configPath=tslint.json
+# Caminho para os relatórios do TypeScript
+sonar.ts.tslintconfigpath=tslint.json
+sonar.ts.tsconfigpath=tsconfig.json
 
-sonar.tsconfig.path=tsconfig.json
-
-sonar.tests=test,src/**/*.spec.ts
-
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-
+# Configurações do servidor SonarQube
 sonar.host.url=http://localhost:9000
-
-
-sonar.working.directory=.scannerwork
-
-# Configuração da base de dados do SonarQube (opcional)
-# sonar.jdbc.url=jdbc:postgresql://localhost/sonar
-# sonar.jdbc.username=seu-usuario
-# sonar.jdbc.password=seu-senha
-
-sonar.cpd.exclusions=**/node_modules/**,**/dist/**,**/out/**
+sonar.login=admin
+sonar.password=admin
 
