chore: update sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=nest-spire-rest
 sonar.projectVersion=0.0.1
 
 # Linguagem do projeto
-sonar.sources=src
+sonar.sources=.
 sonar.language=ts
 
 # Caminho para os relatórios do TypeScript
@@ -14,4 +14,5 @@ sonar.ts.tsconfigpath=tsconfig.json
 sonar.host.url=http://localhost:9000
 sonar.login=admin
 sonar.password=admin
+sonar.token=sqp_1aadbea229a096f4610831a81813056d0eae442f
 
