--- a/docker-compose.sonar.yml
+++ b/docker-compose.sonar.yml
@@ -2,9 +2,21 @@ version: '3.8'
 services:
   sonarqube:
     container_name: sonarqube
-    image: sonarqube:latest
+    image: sonarqube:community
     ports:
       - '9000:9000'
       - '9092:9092'
     environment:
       - SONARQUBE_JDBC_URL=jdbc:h2:tcp://localhost:9092/sonar
+      - SONARQUBE_JDBC_USERNAME=admin
+      - SONARQUBE_JDBC_PASSWORD=admin
+      
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_logs:/opt/sonarqube/logs
+
+volumes:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_logs:
