chore: update sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,4 @@ sonar.login=admin
 sonar.password=admin
 sonar.token=sqp_1aadbea229a096f4610831a81813056d0eae442f
 
+sonar.java.binaries= **/*.java
