--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -24,3 +24,6 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} # add the URL of your instance to the secrets of this repo with the name SONAR_HOST_URL (Settings > Secrets > Actions > add new repository secret)
         with:
           args: -Dsonar.projectKey=nest-spire-rest
+            -Dsonar.token=sqp_1aadbea229a096f4610831a81813056d0eae442f
+            -Dsonar.host.url=http://localhost:9000
+            -Dsonar.sources=.
