--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -34,7 +35,8 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Gather Test Coverage
-        run: yarn test-coverage
+        run: yarn test:cov
+
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
