--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,5 +15,7 @@ sonar.host.url=http://localhost:9000
 sonar.login=admin
 sonar.password=admin
 sonar.token=sqp_1aadbea229a096f4610831a81813056d0eae442f
+sonar.web.host=sonarqube
+sonar.web.port=9000
 
 sonar.java.binaries= **/*.java
