--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,21 +1,5 @@
 sonar.projectKey=nest-spire-rest
-sonar.projectName=nest-spire-rest
-sonar.projectVersion=0.0.1
-
-# Linguagem do projeto
 sonar.sources=.
-sonar.language=ts
-
-# Caminho para os relatórios do TypeScript
-sonar.ts.tslintconfigpath=tslint.json
-sonar.ts.tsconfigpath=tsconfig.json
-
-# Configurações do servidor SonarQube
 sonar.host.url=http://localhost:9000
-sonar.login=admin
-sonar.password=admin
 sonar.token=sqp_1aadbea229a096f4610831a81813056d0eae442f
-sonar.web.host=sonarqube
-sonar.web.port=9000
-
-sonar.java.binaries= **/*.java
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
