--- a/docker-compose.sonar.yml
+++ b/docker-compose.sonar.yml
@@ -11,6 +11,8 @@ services:
       - SONARQUBE_JDBC_USERNAME=admin
       - SONARQUBE_JDBC_PASSWORD=admin
       - SONAR_HOST_URL=http://localhost:9000
+      - SONAR_SCANNER_OPTS="-Dsonar.projectKey=nest-spire-rest"
+      - SONAR_TOKEN="sqp_1aadbea229a096f4610831a81813056d0eae442f"
 
     volumes:
       - sonarqube_data:/opt/sonarqube/data
