--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,3 +20,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Gather Test Coverage
+        run: yarn test:cov
