--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,8 @@ sonar.projectKey=nest-spire-rest
 sonar.sources=.
 sonar.host.url=http://localhost:9000
 sonar.token=sqp_1aadbea229a096f4610831a81813056d0eae442f
+sonar.sourceEncoding=UTF-8
+sonar.tests=src
+sonar.test.inclusions=**/**/*.spec.ts
+sonar.javascript.coveragePlugin=lcov
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
