--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,10 @@
 sonar.projectKey=nest-spire-rest
-sonar.sources=.
+sonar.sources=src
 sonar.host.url=http://localhost:9000
 sonar.token=sqp_1aadbea229a096f4610831a81813056d0eae442f
+sonar.login=sqp_1aadbea229a096f4610831a81813056d0eae442f
 sonar.sourceEncoding=UTF-8
 sonar.tests=src
-sonar.test.inclusions=**/**/*.spec.ts
+sonar.test.inclusions=src/**/*.spec.ts
 sonar.javascript.coveragePlugin=lcov
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
